--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,11 @@
   <ngt-dropdown-programmig>
     <div class="relative pl-64 py-16 inline-block text-left ">
       <div (click)="toggleShowDiv('Python Programming')">
-        <button  class="inline-flex justify-center w-full bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2  text-sm font-medium  focus:outline-none "
-        id="options-menu" aria-haspopup="true" aria-expanded="true">
-        <input type="text" [disabled]="true" name="fieldName" class=" text-white bg-blue cursor-pointer" ngDefaultControl [(ngModel)]="singleelementofdropdownarrprogram">
+        <button
+          class="inline-flex justify-center w-full bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2  text-sm font-medium font-sans  focus:outline-none "
+          id="options-menu" aria-haspopup="true" aria-expanded="true">
+          <input type="text" [disabled]="true" name="fieldName" class=" text-white bg-blue cursor-pointer font-sans"
+            ngDefaultControl [(ngModel)]="singleelementofdropdownarrprogram">
           <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="#fff"
             aria-hidden="true">
             <path fill-rule="evenodd"
@@ -26,26 +28,28 @@
       </div>
       <div [@slideInOut]="animationState">
         <div class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white  focus:outline-none">
-          <div (click)="changeoption(values)" *ngFor="let values of dropDownarrProgram" class="py-1 " role="menu" aria-orientation="vertical"
-            aria-labelledby="options-menu">
-            <a  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
+          <div (click)="changeoption(values)" *ngFor="let values of dropDownarrProgram" class="py-1 " role="menu"
+            aria-orientation="vertical" aria-labelledby="options-menu">
+            <a class="block px-4 py-2 text-sm text-gray-700 font-sans hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
               role="menuitem">{{values}}</a>
           </div>
         </div>
       </div>
     </div>
   </ngt-dropdown-programmig>
-    <!-- End for code for programming dropdown in selector ngt-dropdown-programmig -->
+  <!-- End for code for programming dropdown in selector ngt-dropdown-programmig -->
 
 
 
-<!-- code for New dropdown in selector ngt-dropdown-New -->
+  <!-- code for New dropdown in selector ngt-dropdown-New -->
   <ngt-dropdown-New>
     <div class="relative pl-64 py-16 inline-block text-left">
       <div (click)="toggleShowDiv('New')" class="w-28 ">
-        <button class="flex flex-row justify-center w-full bg-gray-100 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium text-gray-700 focus:outline-none "
-        id="options-menu" aria-haspopup="true" aria-expanded="true">
-        <input type="text" [disabled]="true" name="fieldName" class="w-full text-black-200 cursor-pointer" ngDefaultControl [(ngModel)]="singleelementofdropDownforNew">
+        <button
+          class="flex flex-row justify-center w-full bg-gray-100 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium font-sans  text-gray-700 focus:outline-none "
+          id="options-menu" aria-haspopup="true" aria-expanded="true">
+          <input type="text" [disabled]="true" name="fieldName" class="w-full text-black-200 font-sans  cursor-pointer"
+            ngDefaultControl [(ngModel)]="singleelementofdropDownforNew">
           <svg class="-mr-1  h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
             aria-hidden="true">
             <path fill-rule="evenodd"
@@ -55,9 +59,9 @@
         </button>
       </div>
       <div [@slideInOut]="animationfornewdropdown"
-        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
-        <div  (click)="changeoptionNew(values)" *ngFor="let values of dropDownforNew" class="py-1" role="menu" aria-orientation="vertical"
-          aria-labelledby="options-menu">
+        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white font-sans  ">
+        <div (click)="changeoptionNew(values)" *ngFor="let values of dropDownforNew" class="py-1" role="menu"
+          aria-orientation="vertical" aria-labelledby="options-menu">
           <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
             role="menuitem">{{values}}</a>
         </div>
@@ -71,9 +75,12 @@
   <ngt-dropdown-clans>
     <div class="relative pl-64 py-16 inline-block text-left ">
       <div (click)="toggleShowDiv('Mahishmati')" class="w-44">
-        <button class="inline-flex justify-center w-full bg-green bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-sm font-medium text-white focus:outline-none "
-        id="options-menu" aria-haspopup="true" aria-expanded="true">
-        <input type="text" [disabled]="true" name="fieldName" class="w-full text-white bg-green cursor-pointer" ngDefaultControl [(ngModel)]="singleelementofdropDownforClans">
+        <button
+          class="inline-flex justify-center w-full bg-green bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-sm font-medium font-sans  text-white focus:outline-none "
+          id="options-menu" aria-haspopup="true" aria-expanded="true">
+          <input type="text" [disabled]="true" name="fieldName"
+            class="w-full text-white bg-green font-sans  cursor-pointer" ngDefaultControl
+            [(ngModel)]="singleelementofdropDownforClans">
           <svg class="-mr-1 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
             aria-hidden="true">
             <path fill-rule="evenodd"
@@ -84,25 +91,27 @@
       </div>
       <!-- ring-1 ring-black ring-opacity-5  -->
       <div [@slideInOut]="animationformahishmathidropdown"
-        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
-        <div (click)="changeoptionforClans(values)"  *ngFor="let values of dropDownforClans" class="py-1" role="menu" aria-orientation="vertical"
-          aria-labelledby="options-menu">
+        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white font-sans  ">
+        <div (click)="changeoptionforClans(values)" *ngFor="let values of dropDownforClans" class="py-1" role="menu"
+          aria-orientation="vertical" aria-labelledby="options-menu">
           <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
             role="menuitem">{{values}}</a>
         </div>
       </div>
     </div>
   </ngt-dropdown-clans>
-    <!-- End code for Clans dropdown in selector ngt-dropdown-clans -->
+  <!-- End code for Clans dropdown in selector ngt-dropdown-clans -->
 
 
-      <!-- code for Languages dropdown in selector ngt-dropdown-languages -->
+  <!-- code for Languages dropdown in selector ngt-dropdown-languages -->
   <ngt-dropdown-languages>
     <div class="relative pl-64 py-16 inline-block text-left ">
       <div (click)="toggleShowDiv('Language')" class="w-60">
-        <button class="flex flex-row justify-center w-full bg-gray-100 bg-opacity-100 rounded-full shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none "
-        id="options-menu" aria-haspopup="true" aria-expanded="true">
-        <input type="text" [disabled]="true" name="fieldName" class="w-full text-black-200 cursor-pointer" ngDefaultControl [(ngModel)]="singleelementofdropDownforLanguages">
+        <button
+          class="flex flex-row justify-center w-full bg-gray-100 bg-opacity-100 rounded-full shadow-sm px-4 py-2 bg-white font-sans  text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none "
+          id="options-menu" aria-haspopup="true" aria-expanded="true">
+          <input type="text" [disabled]="true" name="fieldName" class="w-full text-black-200 font-sans  cursor-pointer"
+            ngDefaultControl [(ngModel)]="singleelementofdropDownforLanguages">
           <svg class="-mr-1 h-5 w-5 justify-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
             fill="currentColor" aria-hidden="true">
             <path fill-rule="evenodd"
@@ -112,31 +121,31 @@
         </button>
       </div>
       <div [@slideInOut]="animationforlanguagedropdown"
-        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
-        <div (click)="changeoptionforPrograms(values)" *ngFor="let values of dropDownforLanguages" class="py-1" role="menu" aria-orientation="vertical"
-          aria-labelledby="options-menu">
+        class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white font-sans  ">
+        <div (click)="changeoptionforPrograms(values)" *ngFor="let values of dropDownforLanguages" class="py-1"
+          role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
           <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 cursor-pointer"
             role="menuitem">{{values}}</a>
         </div>
       </div>
     </div>
-    
-  </ngt-dropdown-languages>
-      <!-- End code for Languages dropdown in selector ngt-dropdown-languages -->
 
-<!-- code for Posts dropdown in selector ngt-dropdown-posts -->
+  </ngt-dropdown-languages>
+  <!-- End code for Languages dropdown in selector ngt-dropdown-languages -->
+
+  <!-- code for Posts dropdown in selector ngt-dropdown-posts -->
   <ngt-dropdown-posts>
     <div class="relative pl-32 py-32  inline-block w-3/6 ">
       <div class="flex flex-wrap content-center">
         <button type="button"
-          class="flex flex-wrap content-center  justify-left w-full h-20 bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-md font-bold text-white hover:bg-blue focus:outline-none "
+          class="flex flex-wrap content-center  justify-left w-full h-20 bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-md font-bold text-white hover:bg-blue focus:outline-none font-sans "
           id="options-menu" aria-haspopup="true" aria-expanded="true">
           <div
-            class="font-bold text-2xl text-blue rounded-full bg-white flex items-center justify-center font-mono w-10 h-10 px-4 py-4">
+            class="font-bold text-2xl text-blue rounded-full bg-white flex items-center justify-center font-sans  font-mono w-10 h-10 px-4 py-4">
             P</div>
           <div class="flex flex-col ">
-            <span class="px-4">Python Programming</span>
-            <span class="text-xs font-medium text-gray inline-flex px-4">1000+ Posts</span>
+            <span class="px-4 font-sans ">Python Programming</span>
+            <span class="text-xs font-medium text-gray inline-flex px-4 font-sans ">1000+ Posts</span>
           </div>
           <img (click)="toggleShowDiv('Post')" class="ml-auto mt-3 h-5 w-5 mr-4 " src="../../../assets/menu.svg">
           <!-- <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -144,26 +153,28 @@
             </svg> -->
         </button>
       </div>
-     
+
       <div [@slideInOut]="animationforpostdropdown">
         <img class="origin-top-right absolute right-0  -mt-7 mr-6 " src="../../../assets/Component 983 – 1.svg">
-        <div class="focus:outline-none origin-top-right absolute right-0 z-40 w-32 -mt-5 mr-4 rounded-md shadow-lg bg-white">
-        <div *ngFor="let values of dropDownarratPost" class="py-1" role="menu" aria-orientation="vertical"
-          aria-labelledby="options-menu">
-          <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-            role="menuitem">{{values}}</a>
+        <div
+          class="focus:outline-none origin-top-right absolute right-0 z-40 w-32 -mt-5 mr-4 rounded-md shadow-lg font-sans  bg-white">
+          <div *ngFor="let values of dropDownarratPost" class="py-1" role="menu" aria-orientation="vertical"
+            aria-labelledby="options-menu">
+            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+              role="menuitem">{{values}}</a>
+          </div>
         </div>
       </div>
     </div>
-    </div>
   </ngt-dropdown-posts>
-<!-- End code for Posts dropdown in selector ngt-dropdown-posts -->
+  <!-- End code for Posts dropdown in selector ngt-dropdown-posts -->
 
 
   <ngt-dropdown-profile>
     <div class="relative pl-64 py-16 inline-block text-left ">
       <div (click)="toggleShowDiv('Profile')">
-        <button type="button" class="flex flex-row px-4 py-2 bg-white text-sm font-medium font-sans text-white focus:outline-none "
+        <button type="button"
+          class="flex flex-row px-4 py-2 bg-white text-sm font-medium font-sans text-white focus:outline-none "
           id="options-menu" aria-haspopup="true" aria-expanded="true">
           <img class="h-30 w-30" src="../../../assets/Rectangle 2.svg">
           <span class="px-4 text-md mt-3 font-medium text-black-200 mr-4 font-sans">
@@ -173,8 +184,7 @@
         </button>
       </div>
       <div [@slideInOut]="animationforprofiledropdown" class="">
-        <img style="bottom: 7rem;" class="focus:outline-none absolute right-0  -mt-4 mr-2"
-          src="assets/Polygon 1.svg">
+        <img style="bottom: 7rem;" class="focus:outline-none absolute right-0  -mt-4 mr-2" src="assets/Polygon 1.svg">
         <div style="width: 150px;bottom: 7.5rem;"
           class="absolute right-0 bg-blue -mt-2 rounded-md shadow-lg bg-blue bg-opacity-100 ">
           <div *ngFor="let values of dropDownarratProfile" class="py-1 " role="menu" aria-orientation="vertical"
@@ -187,10 +197,11 @@
               <img *ngIf="values=='Logout'" class=" mr-5 h-30 w-30 ml-6" src="../../../assets/sign-out-alt-solid.svg">
               <a href="#" class="block  py-2 text-sm text-white" role="menuitem">{{values}}</a>
             </div>
-    
+
           </div>
         </div>
       </div>
-    
-    </div></ngt-dropdown-profile>
+
+    </div>
+  </ngt-dropdown-profile>
 </ngt-dropdown>
